    require any configuration changes because setp works on both.
  * new motion.spindle-atspeed-in pin can be used to cause motion to
    wait for the spindle to reach a newly-programmed speed at the
    beginning of feed moves.
  * new component "near" which tells whether two values are roughly equal
    as determined by configurable parameters

  * [add bugfixes from the 2.2.x branch here, before release]

 -- Chris Radek <chris@timeguy.com>  Sat,  1 Nov 2008 01:28:46 -0500

emc2 (1:2.2.0) unstable; urgency=low

  * Bump version for release
  * G41.1, G42.1, G43.1 to take tool parameters from gcode instead of tool
    table
  * split libposemath and libemcini from libnml
  * new inifile item: [HAL]SHUTDOWN, a .hal file run at a clean shutdown of emc
  * new component: deadzone
  * new component: tristate_float
  * new component: random
  * new components: clarke2 clark3 clarkeinv
  * hexapod visualization
  * scara robot sample configuration with visualization
  * opengl machine visualization for several "robots"
  * new m5i20 firmwares
  * M66 - digital input control (wait & read external HAL inputs)
  * userspace "comp"
  * hal-8255 driver for a PCI multiple-8255 card
  * tapered in/out on multipass threading canned cycle
  * debug and print output from the interpreter
  * named parameters in the interpreter
  * puma robot kinematics
  * sample configuration for a puma robot
  * reduce quantization of the encoder module's velocity output
  * MDI history manipulation and save in AXIS
  * home to index on STG1
  * number of samples in halscope can be specified at runtime
  * add 'source' command to halcmd
  * add tcl interface to halcmd commands (tcl/hal.so)
  * add "-U" (force unload) to halrun script
  * new component: lut5
  * image-to-gcode: roughing passes
  * rs274.author: automatic arc recognition (used by image-to-gcode)
  * Filters can now show progress bars in the AXIS window as they run
  * U,V,W linear axes with fully coordinated motion